--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -1,8 +1,18 @@
 [package]
 name = "expt-rust-lambda"
 version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+edition = "2018"
 
 [dependencies]
+lambda_runtime = "^0.4"
+lambda_http = "^0.4.0"
+serde = "^1"
+serde_json = "^1"
+serde_derive = "^1"
+tokio = "1.11.0"
+log = "^0.4"
+simple_logger = "^1"
+
+[[bin]]
+name = "bootstrap"
+path = "src/main.rs"
