--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -12,7 +12,10 @@ serde_derive = "^1"
 tokio = "1.11.0"
 log = "^0.4"
 simple_logger = "^1"
+anyhow = { version = "1", features = ["backtrace"] }
 
 [[bin]]
 name = "bootstrap"
 path = "src/main.rs"
+
+[feature]
